--- a/TodoApp/package.json
+++ b/TodoApp/package.json
@@ -13,6 +13,9 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.6.8",
+    "cuid": "^3.0.0",
+    "fbemitter": "^3.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.2",
